# galeon

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-COMMERCIAL.md  README.md  package.json  tsconfig.base.json  tsconfig.json
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
crates/engine/: Cargo.toml
crates/engine-macros/: Cargo.toml
crates/engine-macros/src/: lib.rs
crates/engine-terrain/: Cargo.toml
crates/engine-terrain/examples/: terrain.rs
crates/engine-terrain/src/: lib.rs
crates/engine-three-sync/: Cargo.toml
crates/engine-three-sync/src/: extract.rs  frame_packet.rs  lib.rs  snapshot.rs
crates/engine-three-sync/tests/: consumer_owned_bootstrap.rs  dynamic_spawn_despawn.rs  picking_bridge.rs
crates/engine/examples/: picking_demo.rs  protocol_proof.rs
crates/engine/src/: archetype.rs  codegen.rs  commands.rs  component.rs  data.rs  deadline.rs  engine.rs  entity.rs  event.rs  function_system.rs  game_loop.rs  handler.rs  handler_function.rs  hot_reload.rs  lib.rs  manifest.rs  particle.rs  protocol.rs  query.rs  render.rs  render_channel.rs  render_event.rs  resource.rs  route_scanner.rs  schedule.rs  selection.rs  system_param.rs  tick.rs  virtual_time.rs  world.rs
crates/engine/tests/: change_detection.rs  handler_macros.rs  handler_validate_negative.rs  protocol_compile_fail.rs  protocol_macros.rs  protocol_manifest.rs  query_iter.rs  system_param_integration.rs
crates/engine/tests/compile-fail/: command_on_enum.rs  command_on_enum.stderr  command_on_tuple_struct.rs  command_on_tuple_struct.stderr  handler_async.rs  handler_async.stderr  handler_generic.rs  handler_generic.stderr  handler_no_params.rs  handler_no_params.stderr  handler_no_result.rs  handler_no_result.stderr  handler_non_system_param_extra.rs  handler_non_system_param_extra.stderr  handler_private.rs  handler_private.stderr
crates/galeon-cli/: Cargo.toml  build.rs
crates/galeon-cli/src/: generate.rs  main.rs  new.rs  routes.rs  templates.rs
crates/protocol-consumer-test/: Cargo.toml
crates/protocol-consumer-test/src/: lib.rs
crates/protocol-rename-test/: Cargo.toml
crates/protocol-rename-test/src/: lib.rs
docs/adr/: 000-template.md  0001-entity-hierarchy-parent-pointer.md  0002-framework-neutral-render-contract.md  0003-picking-and-selection-helper.md  001-dual-license-agpl-commercial.md  002-rust-ecs-single-source-of-truth.md  003-sparse-set-over-archetype-storage.md  004-workspace-layout.md  005-rust-first-ts-only-for-browser-apis.md
docs/guide/: cli-getting-started.md  cli.md  data-loading.md  deadlines.md  ecs.md  effects.md  game-loop.md  hot-reload.md  instancing.md  local-first-starter.md  picking.md  plugins.md  protocol.md  publishing.md  shiplog-labels.md  systems.md  terrain.md  three-sync.md  time.md
docs/spikes/: 2026-04-24-effect-boundary-evaluation.md
docs/superpowers/plans/: 2026-03-20-lazy-query-iterators.md  2026-04-05-object3d-type-diversity.md
examples/billboards/: index.html  package.json  tsconfig.json
examples/billboards/src/: main.ts  simulation.ts
examples/billboards/tests/: simulation.test.ts
examples/instanced-cubes/: README.md  index.html  package.json  tsconfig.json
examples/instanced-cubes/src/: main.ts
scripts/: bump-version.sh
tests/: local-first-starter-smoke.sh  release-workflow-logic.sh
