[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.4.0"
edition = "2024"
license = "AGPL-3.0-only OR LicenseRef-Commercial"
repository = "https://github.com/galeon-engine/galeon"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ron = "0.12"
wasm-bindgen = "0.2"
proc-macro2 = "1"
quote = "1"
inventory = "0.3"
syn = { version = "2", features = ["full"] }
clap = { version = "4", features = ["derive"] }
tempfile = "3"
toml = "1"

