[package]
name = "galeon-engine-macros"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Procedural macros for Galeon component registration and codegen."
keywords = ["galeon", "proc-macro", "ecs", "game"]
categories = ["game-development"]

[lib]
proc-macro = true

[dependencies]
proc-macro-crate = "3"
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
