[package]
name = "galeon-engine-three-sync"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
galeon-engine = { path = "../engine" }
serde = { workspace = true }
serde_json = { workspace = true }
wasm-bindgen = { workspace = true }
