[package]
name = "galeon-engine-three-sync"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "WASM-friendly bridge from Galeon ECS to Three.js render extraction."
keywords = ["galeon", "threejs", "wasm", "web", "game"]
categories = ["game-development", "wasm"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
galeon-engine = { path = "../engine", version = "=0.4.0" }
serde = { workspace = true }
serde_json = { workspace = true }
wasm-bindgen = { workspace = true }
