[package]
name = "galeon-engine"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
galeon-engine-macros = { path = "../engine-macros" }
serde = { workspace = true }
ron = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tempfile = "3"
