[package]
name = "galeon-engine"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
galeon-engine-macros = { path = "../engine-macros" }
inventory = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ron = { workspace = true }

[dev-dependencies]
tempfile = "3"
trybuild = "1"
