[package]
name = "galeon-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core ECS game engine: entities, components, systems, and scheduling."
keywords = ["galeon", "ecs", "game-engine", "entity"]
categories = ["game-development"]

[dependencies]
galeon-engine-macros = { path = "../engine-macros", version = "=0.1.0" }
inventory = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ron = { workspace = true }

[dev-dependencies]
tempfile = "3"
trybuild = "1"
