[package]
name = "galeon-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Project scaffolding, code generation, and route inspection CLI for Galeon."
keywords = ["galeon", "cli", "game-engine", "codegen"]
categories = ["command-line-utilities", "game-development"]

[[bin]]
name = "galeon"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
toml = { workspace = true }
